fix for logo alignment, added gradient options for image with handles

--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -22,6 +22,7 @@ header.main-header {
         img {
           max-width: 135px;
           height: 42px;
+          margin-top: -22px;
         }
       }
       ul {
