--- a/src/styles/modules/_image-with-handle.scss
+++ b/src/styles/modules/_image-with-handle.scss
@@ -17,10 +17,16 @@
     }
     width: 100%;
     position: absolute;
-    bottom: 0;
     opacity: 0.62;
     mix-blend-mode: multiply;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+    &:not(.top) {
+      bottom: 0;
+      background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+    }
+    &.top {
+      top: 0;
+      background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.5));
+    }
   }
 
   div.featured-image-text {
